@@ -1,8 +1,9 @@
 <?php
 
   $group = elgg_get_page_owner_entity();
+  $create_page = get_input('au_subgroup', false);
   
-if (elgg_instanceof($group, 'group')) {
+if (elgg_instanceof($group, 'group') && !$create_page) {
   
   $title = elgg_echo('au_subgroups:move:edit:title');
   
